[gd_scene load_steps=22 format=3 uid="uid://txoo4dfo8h56"]

[ext_resource type="Texture2D" uid="uid://bu1dithutlsbd" path="res://assets/graphics/characters/enemies/Orc-Hurt.png" id="1_fc5vk"]
[ext_resource type="Script" path="res://Scripts/Enemies/AxeMan.gd" id="1_wi8ut"]
[ext_resource type="Texture2D" uid="uid://d1lu50jhkdg0b" path="res://assets/graphics/characters/enemies/Orc-Death.png" id="2_7ajgy"]
[ext_resource type="Texture2D" uid="uid://bttxa31akea77" path="res://assets/graphics/characters/enemies/Orc-Idle.png" id="3_o4jjx"]
[ext_resource type="Texture2D" uid="uid://ulq4x8ljnu5h" path="res://assets/graphics/characters/enemies/Orc-Walk.png" id="4_1dl7v"]
[ext_resource type="Texture2D" uid="uid://cp6ltywuvawo" path="res://assets/graphics/characters/enemies/Orc-Attack01.png" id="5_ac57m"]
[ext_resource type="Texture2D" uid="uid://coalhda3pagdb" path="res://assets/graphics/characters/enemies/Orc-Attack02.png" id="6_yltus"]
[ext_resource type="Script" path="res://Scripts/Misc/StateMachine/StateMachine.gd" id="8_h8hxk"]
[ext_resource type="Script" path="res://Scripts/Misc/StateMachine/States/Enemies/Wander.gd" id="9_odq5l"]
[ext_resource type="Script" path="res://Scripts/Misc/StateMachine/States/Enemies/Chase.gd" id="10_ll1d1"]
[ext_resource type="Script" path="res://Scripts/Misc/StateMachine/States/Enemies/AxeMan/AxeManAttack1.gd" id="11_ft6kp"]

[sub_resource type="Animation" id="Animation_o88ln"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o4jjx")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_qx3ov"]
resource_name = "attack_1"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ac57m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667, 1, 1.16667, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 4, 5]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 1.16667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"attack_hitbox_disabler"
}, {
"args": [true],
"method": &"attack_hitbox_disabler"
}]
}

[sub_resource type="Animation" id="Animation_ni2r7"]
resource_name = "attack_2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_yltus")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.966667, 1.1, 1.23333, 1.36667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_i5v28"]
resource_name = "damage"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_fc5vk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_dyhjv"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7ajgy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 2, 3]
}

[sub_resource type="Animation" id="Animation_tdgne"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o4jjx")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_yoo65"]
resource_name = "walking"
length = 0.9333
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1dl7v")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5bum"]
_data = {
"RESET": SubResource("Animation_o88ln"),
"attack_1": SubResource("Animation_qx3ov"),
"attack_2": SubResource("Animation_ni2r7"),
"damage": SubResource("Animation_i5v28"),
"death": SubResource("Animation_dyhjv"),
"idle": SubResource("Animation_tdgne"),
"walking": SubResource("Animation_yoo65")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_y6h2g"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3n161"]
radius = 12.0

[node name="AxeMan" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_wi8ut")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("3_o4jjx")
offset = Vector2(0, -7)
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l5bum")
}
autoplay = "idle"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("8_h8hxk")
initial_state = NodePath("Wander")

[node name="Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_odq5l")
enemy = NodePath("../..")

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("10_ll1d1")
enemy = NodePath("../..")

[node name="Attack1" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("11_ft6kp")
enemy = NodePath("../..")

[node name="StateLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Wander"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_y6h2g")

[node name="AttackHitbox" type="Area2D" parent="."]
position = Vector2(17, -6)
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
shape = SubResource("CircleShape2D_3n161")

[connection signal="body_entered" from="AttackHitbox" to="." method="_on_attack_hitbox_body_entered"]
